--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,5 @@
 {
   "name": "Python 3.11",
-  "image": "mcr.microsoft.com/devcontainers/python:0-3.11",
-  "features": {
-    "ghcr.io/devcontainers/features/python:1": {}
-  }
+  "image": "python:3.11-slim",
+  "features": {}
 }
